# RBF_coordinate_descent

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  algo.hpp  geo_polyline.hpp  main.cpp  output.hpp  rbf.hpp  sdf.hpp  test_init.hpp
src/script/: animation.py  correlation.py  debug.m  rbf.py  surface_plot.m
